# Voida

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: body.rs  celestial.rs  main.rs  simulation.rs  tui.rs  utils.rs  world.rs
src/gui/: control.rs  gui.rs  mod.rs
src/simulation/: control.rs  mod.rs  simulation.rs
src/tui/: frame.rs  intro.rs  mod.rs  tui.rs  window.rs
src/tui/intro/: intro.rs  logo.rs  mod.rs  particle.rs
src/tui/window/: camera.rs  config.rs  mod.rs  plot.rs  text.rs  window.rs
src/world/: celestials.rs  config.rs  mod.rs  spaceship.rs  world.rs
