[package]
name = "voida"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.25.0", features = ["sync", "time", "macros", "rt-multi-thread"] }
rand = "0.8.5"
rodio = "0.18.0"
#textplots = "0.8.4"
#termion = "2.0.1"
embedded-graphics = "0.8.1"
embedded-graphics-simulator = "0.6.0"
approx = "0.5.1"
rapier3d = "0.19.0"
nalgebra = "0.32.5"
